# sentry-kernel

./: .config  .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  meson.build  meson.options  requirements.txt
.github/workflows/: gnulinux.yml  macos.yml  msys2.yml  proof.yml
autotest/: Kconfig  meson.build
autotest/include/: io.h  meson.build
autotest/src/: main.c  meson.build
autotest/src/tests/: meson.build
autotest/src/tests/include/: meson.build
autotest/src/tests/src/: meson.build  test_assert.h  test_cycles.c  test_dma.c  test_gpio.c  test_handle.c  test_ipc.c  test_irq.c  test_map.c  test_random.c  test_shm.c  test_signal.c  test_sleep.c  test_yield.c
autotest/src/tests/src-rs/: Cargo.toml  build.rs  lib.rs  meson.build
autotest/src/tests/src-rs/src/: devices-dt.rs.in  devices_utils.rs  lib.rs  main.rs  test_cycles.rs  test_dma.rs  test_gpio.rs  test_handle.rs  test_ipc.rs  test_irq.rs  test_log.rs  test_map.rs  test_random.rs  test_shm.rs  test_signal.rs  test_sleep.rs  test_yield.rs
configs/: nucleo_u5a5_autotest_harden_defconfig  qemu_rv32im_defconfig  stm32h573i_dk_defconfig
doc/: .gitignore
doc/concepts/concepts/: events.rst
doc/concepts/sw_architecture/: bsp.rst
doc/internals/: Doxyfile
dts/: meson.build  sentry.dtsi
dts/examples/: nucleo_u5a5.dts  nucleo_u5a5_autotest.dts  nucleo_u5a5_autotest_harden.dts  opentitan_earlgrey.dts  stm32h573i_dk.dts
idle/src/: main.c
idle/src/arch/: control.h  meson.build
idle/src/arch/asm-cortex-m/: control.h
idle/src/arch/riscv32/: control.h  meson.build  riscv32-idle.ld.in
kernel/: Kconfig
kernel/include/bsp/drivers/clk/: pwr.h  rcc.h
kernel/include/sentry/: io.h
kernel/include/sentry/arch/: meson.build
kernel/include/sentry/arch/asm-generic/: interrupt.h  membarriers.h  memory.h  panic.h  platform.h  thread.h  tick.h
kernel/include/sentry/arch/asm-rv32/: asm_utils.h  buses.h  handler.h  io.h  membarriers.h  meson.build  platform.h  plic.h  pmp.h  systick.h  thread.h  tick.h
kernel/proof/: meson.build
kernel/proof/libproof/: meson.build
kernel/proof/libproof/include/: framac_entropy.h
kernel/proof/libproof/src/: entropy.c
kernel/proof/proof_composition/proof_arch/: main_arch.c  meson.build
kernel/proof/proof_composition/proof_bsp/proof_exti/: main.c  meson.build
kernel/proof/proof_composition/proof_bsp/proof_pwr/: main.c  meson.build
kernel/proof/proof_composition/proof_bsp/proof_rcc/: main.c  meson.build
kernel/proof/proof_composition/proof_bsp/proof_rng/: main.c  meson.build
kernel/proof/proof_composition/proof_zlib/: kernel_zlib.c  meson.build
kernel/proof/proof_entrypoint/: kernel_entrypoint.c  meson.build
kernel/proof/proof_handlers/svc/: handler.c  meson.build
kernel/proof/proof_handlers/systick/: handler_systick.c  meson.build
kernel/src/arch/: Kconfig  meson.build
kernel/src/arch/asm-cortex-m/: Kconfig  meson.build
kernel/src/arch/asm-generic/: Kconfig
kernel/src/arch/asm-rv32/: Kconfig  handler-svc-lut.c  handler.c  meson.build  rv32-sentry.ld.in  systick.c  tick.c
kernel/src/drivers/: meson.build
kernel/src/managers/: meson.build
kernel/src/managers/clock/: perfo.c
kernel/src/managers/device/: device.c
kernel/src/managers/memory/: memory_mpu.c
kernel/src/managers/time/: delay.c
kernel/src/sched/: meson.build
kernel/src/syscalls/: meson.build  sysgate_get_devhandle.c  sysgate_gpio.c  sysgate_int_acknowledge.c  sysgate_int_disable.c  sysgate_int_enable.c  sysgate_send_ipc.c  sysgate_waitforevent.c
kernel/src/zlib/: meson.build
kernel/tests/: cmocka.c  meson.build
kernel/tests/mock/: memory.c  meson.build
kernel/tests/mock/include/: garbage.h
kernel/tests/mock/src/: garbage.c  memory.c
kernel/tests/test_bsp/test_exti/: meson.build  test_exti.c
kernel/tests/test_managers/: meson.build
kernel/tests/test_managers/test_debug/: meson.build  test_printk.c
kernel/tests/test_utils/test_bits/: meson.build  test_bits.c
kernel/tests/test_utils/test_io/: meson.build  test_io.c
subprojects/: .gitignore  cmocka.wrap  cmsis.wrap  devicetree.wrap  meson-svd.wrap
support/arch/: meson.build
support/arch/asm-cortex-m/: meson.build
support/arch/riscv32/: meson.build
support/meson/: riscv32im-unknown-none-elf.ini
uapi/: Cargo.toml  README.md  meson.build
uapi/src/: exchange.rs  ffi_c.rs  lib.rs  systypes.rs
uapi/src/arch/: meson.build  mod.rs  riscv32.rs
uapi/tests/: kani_tests.rs
